# vkfft_ExecZ2Z

./: .gitmodules  CMakeLists.txt  VkFFT  main.cu
.github/workflows/: Ubuntu.yml  cuda.yml
